--- a/public/index.html
+++ b/public/index.html
@@ -699,7 +699,7 @@
   <footer style="background: var(--light-dark); padding: 30px 0; text-align: center; border-top: 2px solid var(--primary);">
     <div class="container">
       <p style="margin: 0; color: #aaa;">
-        &copy; 2026 <span style="color: var(--primary); font-weight: 700;">Cue Stories</span> - Where Every Shot Tells a Story
+        &copy; 2026 <span style="color: var(--primary); font-weight: 700;">Cue Stories</span> - Where Every Shot Tells a Story Piyush
       </p>
       <p style="margin: 10px 0 0 0; color: #666; font-size: 0.9rem;">
         Premium Snooker & Foosball Venue in Akluj, Maharashtra
