--- a/public/pages/booking.html
+++ b/public/pages/booking.html
@@ -893,7 +893,7 @@
 
         // Open Razorpay checkout directly
         const options = {
-          key: 'rzp_test_S88GHrybG0zjNZ',
+          key: 'rzp_live_S9cCYCCuhD91m2',
           amount: totalAmount * 100, // in paise
           currency: 'INR',
           name: 'Cue Stories',
